feat: add dashboard statistic metrics for admin
