# domain/dashboard/response/statistics.go
@@ -1,0 +1,8 @@
+package response
+
+type DashboardStatistics struct {
+	TotalModules           int `json:"total_modules"`
+	TotalSubjects          int `json:"total_subjects"`
+	TotalGrades            int `json:"total_grades"`
+	TotalSubmittedSubmissions int `json:"total_submitted_submissions"`
+}
